--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@use-expo/font": "^2.0.0",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
