--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "twrnc": "^3.3.3"
   },
   "devDependencies": {
