--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
