--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-av": "^11.2.3",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
