--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.7",
-    "react-native-webview": "11.18.1",
+    "react-native-webview": "^11.22.7",
     "twrnc": "^3.3.3"
   },
   "devDependencies": {
