--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "fast-html-parser": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-root-toast": "^3.4.0",
