--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@types/react": "^18.0.15",
+    "@types/react-native": "^0.69.5",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
@@ -25,7 +27,7 @@
     "fast-html-parser": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-root-toast": "^3.4.0",
@@ -37,7 +39,9 @@
     "twrnc": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-typescript-transformer": "^1.2.13",
+    "typescript": "^4.7.4"
   },
   "private": true
 }
