Auto-Rotate Funtionality added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "skipLibCheck": true,
     "target": "ESNext"
   },
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+  "exclude": ["node_modules"]
 }
