--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-av": "^11.2.3",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
+    "expo-screen-orientation": "^4.3.0",
     "expo-status-bar": "~1.3.0",
     "fast-html-parser": "^1.0.1",
     "react": "17.0.2",
@@ -33,6 +34,7 @@
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-searchable-dropdown": "^1.1.3",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.7",
     "react-native-webview": "^11.22.7",
