--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-av": "^11.2.3",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
-    "expo-screen-orientation": "^4.3.0",
+    "expo-screen-orientation": "~4.2.0",
     "expo-status-bar": "~1.3.0",
     "fast-html-parser": "^1.0.1",
     "react": "17.0.2",
@@ -37,7 +37,7 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.7",
-    "react-native-webview": "^11.22.7",
+    "react-native-webview": "11.18.1",
     "twrnc": "^3.3.3"
   },
   "devDependencies": {
