--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@gorhom/bottom-sheet": "^4",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
-    "@types/react": "^18.0.15",
-    "@types/react-native": "^0.69.5",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
@@ -26,11 +27,13 @@
     "expo-screen-orientation": "~4.2.0",
     "expo-status-bar": "~1.3.0",
     "fast-html-parser": "^1.0.1",
+    "metro-core": "^0.72.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
