--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-paystack-webview": "^4.0.3",
     "react-native-reanimated": "~2.8.0",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.2.4",
