--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -34,7 +35,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paystack-webview": "^4.0.3",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-reanimated": "^2.10.0",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
